* Reports: fix incorrect translations in reports
* Dialer: fix breakage due to introduction of 'goto' as reserved word in PHP 5.4
* Agent Console: fix bug in which a chronometer counter that starts from 0, as
  signaled in an event might be mistakenly interpreted as an order to stop the
  chronometer. Might fix Elastix bug #1319. Also, set consistent behavior of
  stopping chronometer on idle agent case. 
* Agent Console: if Elastix user matches an agent number, suggest this agent 
  number as the default agent to use for initial agent login. Second part of fix
  for Elastix bug #1354.
* Agents Monitoring: replace sending of full client state with hash of said 
  state. This prevents a potential issue of hitting a maximum URL length limit 
  due to unbounded size of agent list.
* Calls Per Agent: clean up implementation to use SQL query parameters and 
  simplify the API. Fix average calculation. Fixes Elastix bug #1371.
* Agents Monitoring: improve error handling when dialer process is shut down in
  the middle of monitoring.
* Installer: change form_field.etiqueta and form_field.value fields to TEXT.
  Fixes Elastix bug #1250.
* Dialer: put workaround for PHP bug #18556 which breaks dialerd with Turkish
  locales. Fixes Elastix bug #1381. 
* Campaign Out: implement manual choosing of character set encoding for CSV file
  upload. 
* Dialer: fix incorrect field access syntax on trunk error output.
* Agent Console: if Elastix user has a default extension, suggest this extension
  as the extension to use for initial agent login. Possible fix for Elastix bug
  #1354.
* Agents Monitoring: make use of "getagentactivitysummary" request to rewrite
  the implementation of the real-time status report. The report now uses
  long polling and Server Sent Events in a way similar to the Agent Console. 
  This rewrite is expected to significantly reduce the server load over the old
  strategy of running the complete report algorithm every four seconds.